--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 		<div class="global-container">
 			<img
 				src="assets/cocacola_logo 1.png"
-				alt=""
+				alt="logo coca-cola"
 				class="coca-cola-text"
 			/>
 			<button class="click-btn">click</button>
 			<img
 				src="assets/bouteille/1.png"
-				alt="bouteille de cocacola"
+				alt="canette de cocacola"
 				class="coca-cola-image in"
 			/>
 			<div class="description description-in">
 				<h1 class="taste">Zero Sugar</h1>
-				<p class="detail">Coca-Cola Zero Sugar Real Coke taste with zero calories. It's possible!
+				<p class="detail">
+					Coca-Cola Zero Sugar Real Coke taste with zero calories.
+					It's possible!
 				</p>
 			</div>
 		</div>
